set up chat button

--- a/public/popup.html
+++ b/public/popup.html
@@ -9,6 +9,7 @@
     <div id="root">
       <h1>Popup</h1>
       <button id="btn">Click</button>
+      <button id="openChat">Open Chat</button>
       <div id="out"></div>
     </div>
     <script type="module" src="popup.js"></script>
